# TrustRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/documents/: product_specs.md  refund_policy.md  support_faq.md
data/eval/: qa_test.jsonl
docker/: prometheus.yml
docs/: ARCHITECTURE.md  QUICKSTART.md  SAMPLE_EVALUATION.md
scripts/: run_offline_eval.py
src/: __init__.py  config.py  ingest.py  logging_setup.py
src/api/: dependencies.py  main.py  schemas.py
src/evaluation/: failure_modes.py  metrics.py  runner.py
src/monitoring/: __init__.py  metrics.py
src/rag/: chunking.py  mock_llm.py  pipeline.py  providers.py  vector_store.py
tests/: conftest.py  test_api.py  test_chunking.py  test_failure_modes.py  test_metrics.py  test_pipeline_integration.py
